src/test/ui/nll/issue-52534.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/issue-52534.rs:19:14
   |
LL |     foo(|a| &x)
   |           -  ^ `x` would have to be valid for `'0`
   |           |
   |           has type `&'0 u32`
LL | }
   | - but `x` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
